file-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-output-service
  namespace: cloud-file-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-output
  template:
    metadata:
      labels:
        app: file-output
    spec:
      containers:
        - name: output
          image: adityagiri1/cloud-file-processor-file-output-service:latest
          ports:
            - containerPort: 8083
