file-processing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-processing-service
  namespace: cloud-file-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-processing
  template:
    metadata:
      labels:
        app: file-processing
    spec:
      containers:
        - name: processing
          image: adityagiri1/cloud-file-processor-file-processor-service:latest
          ports:
            - containerPort: 8082
