file-upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-upload-service
  namespace: cloud-file-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-upload
  template:
    metadata:
      labels:
        app: file-upload
    spec:
      containers:
        - name: upload
          image: adityagiri1/cloud-file-processor-file-upload-service:latest
          ports:
            - containerPort: 8081
