eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: cloud-file-processor
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
