file-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-output-service
  namespace: cloud-file-processor
spec:
  selector:
    app: file-output
  ports:
    - port: 8083
      targetPort: 8083
