file-processing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-processing-service
  namespace: cloud-file-processor
spec:
  selector:
    app: file-processing
  ports:
    - port: 8082
      targetPort: 8082
