file-upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-upload-service
  namespace: cloud-file-processor
spec:
  selector:
    app: file-upload
  ports:
    - port: 8081
      targetPort: 8081
