postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: cloud-file-processor
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
